--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   <section class="map map--faded">
     <div class="map__pins">
       <div class="map__pinsoverlay"><h2>И снова Токио!</h2></div>
-
       <button class="map__pin map__pin--main">
         <img src="img/main-pin-image.png" width="40" height="44" draggable="false">
         <svg viewBox="0 0 70 70">
@@ -244,6 +243,6 @@
 
   <button style="left: 200px; top: 400px;" class="map__pin"><img src="img/avatars/user07.png" width="40" height="40" draggable="false"></button>
 </template>
-
+<script src="js/map.js"></script>
 </body>
 </html>
