--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
     </template>
     <script src="js/constants.js"></script>
     <script src="js/util.js"></script>
+    <script src="js/backend.js"></script>
     <script src="js/data.js"></script>
     <script src="js/show-card.js"></script>
     <script src="js/pin.js"></script>
