--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
           <fieldset class="form__element form__element--wide">
             <label for="address">Адрес</label>
-            <input id="address" name="address" type="text" required readonly>
+            <input id="address" name="address" type="text" value='x: 535, y: 430' required readonly>
           </fieldset>
 
           <fieldset class="form__element">
